2017-10-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup-dump.c: Fix if shared memory is not used

2017-10-30  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/shm-ring.c (shm_ring_create): Take a new errmsg argument,
	  return NULL on failure
	* common-src/shm-ring.h (shm_ring_create): Change prototype
	* amandad-src/amandad.c: handle shm_ring_create return NULL;
	* device-src/xfer-dest-taper-splitter.c, server-src/dumper.c,
	  server-src/xfer-dest-holding.c,
	  xfer-src/element-glue.c: Pass a NULL errmsg to shm_ring_create

2017-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (read_storage_identlist): Prefer ident to
	  keyword

2017-10-26  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: Fix client compression hang

2017-10-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: Fix parsing of psql version for version
	  10.0

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog2.pm: New Catalog2
	* perl/Amanda/DB/Catalog2/SQLite.pm: New Catalog2 SQlite driver
	* server-src/amcatalog.pl: Program to accessthe Catalog2
	* installcheck/DB_Catalolog2/amdump.catalog.1: Test catalog
	* installcheck/Amanda_DB_Catalog2_SQLite.pl: Test it
	* installcheck/Installcheck/DBCatalog2.pm: Test it

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* man/Makefile.am: Add amanda-catalog.7 and amcatalog.8
	* man/xml-source/amanda-catalog.7.xml: New page to describe the
	  catalog available
	* man/xml-source/amanda.8.xml: Link to amanda-catalog
	* man/xml-source/amanda.conf.5.xml: Explian catalog section
	* man/xml-source/amcatalog.8.xml: New page for amcatlog program

2017-10-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	Add catalog section in configuration file
	* common-src/conffile.c: Add catalog section
	* common-src/conffile.h: Add catalog section
	* perl/Amanda/Config.swg: Add catalog section