@@ -2124,13 +2124,13 @@ make_amanda_tmpdir(void)
 
 #ifdef CHECK_USERID
     if (stat_buf.st_uid != get_client_uid()) {
-	g_debug("Error: Owner of AMANDA_TMPDIR (%s) is not %s\n", AMANDA_TMPDIR, CLIENT_LOGIN);
+	g_debug("Error: Owner of AMANDA_TMPDIR (%s) is not %s", AMANDA_TMPDIR, CLIENT_LOGIN);
 	return FALSE;
     }
 #endif
 
     if (stat_buf.st_mode & S_IWOTH) {
-	g_debug("Error: AMANDA_TMPDIR (%s) must not be writable by other\n", AMANDA_TMPDIR);
+	g_debug("Error: AMANDA_TMPDIR (%s) must not be writable by other", AMANDA_TMPDIR);
 	return FALSE;
     }
 
